[package]
name = "mmr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cmmr = { version = "0.3.2", package = "ckb-merkle-mountain-range"}
blake2-rfc = "0.2.18"
hex = { version = "0.4", default-features = true }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = { version = "1.0.59" }
serde = { version = "1.0", features = ["derive"] }
merkle-mountain-range = { git = "https://github.com/darwinia-network/shadow.git", branch = "add-mmr-client"}
